--- a/templates/base.html
+++ b/templates/base.html
@@ -5,29 +5,46 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Todo WebApp</title>
+  	<title>Todo WebApp</title>
+	
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+
+	<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>	
 
 </head>
 
 <body>
-	
-	<h1>Todo WebApp</h1>
+<div style = "margin-top: 50px;" class = "ui container">
+	<h1 class = "ui center aligned header">Todo WebApp</h1>
 
-	<form action = "">
+	<form class = "ui form" action = "/add" method="POST">
 		<div>
 			<label for="title">Todo Title</label>
 			<input type = "text" name = "title" placeholder = "Enter Something">
 			<br>
-			<button type = "submit">ADD</button> 
+			<button class = "ui blue button" type = "submit">ADD</button> 
 		</div>
 	</form>
 	
 	
 	{% for todo in todo_list %}
-		<p> {{ todo[0] }} | {{ todo[1] }} </p>
+	<div class = "ui segment">
+		<p class = "ui big header"> {{ todo[1] }} </p>
+		
+		{% if todo[2] == False %}
+			<span class = "ui grey label" >Not Completed</span>
+					<a class = "ui green button" href = "/update/{{ todo[0] }}">Mark As Complete</a>
+		{% else %}
+			<span class = "ui green label" >Completed</span>
+					<a class = "ui grey button" href = "/update_not/{{ todo[0] }}">Mark As Inomplete</a>
+		{% endif %}
+		
+
+		<a class = "ui red button" href = "/delete/{{ todo[0] }}">Delete Task</a>
+	</div>
 	{% endfor %}
 	
-		
+</div>		
 </body>
 </html>
 
