--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,10 @@
 
 	<form class = "ui form" action = "/add" method="POST">
 		<div>
-			<label for="title">Todo Title</label>
-			<input type = "text" name = "title" placeholder = "Enter Something">
-			<br>
-			<button class = "ui blue button" type = "submit">ADD</button> 
+			<label for="title">Task At Hand</label>
+			<input type = "text" name = "title" placeholder = "Enter Something...">
+			<br><br>
+			<button style = "text-aligign: center;" class = "ui blue button" type = "submit">ADD</button> 
 		</div>
 	</form>
 	
