Makes Changes to style and adds date and update features

--- a/templates/note.html
+++ b/templates/note.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 	
-	<h1 class = "ui center aligned header">NotePad</h1>
+	<h1 class = "ui center aligned header">Noteefy</h1>
 
 	<form class = "ui form" action = "/add" method="POST">
 		<div class="ui form">
@@ -30,7 +30,10 @@
 			<button class="ui red button">
   				Discard
 			</button></a>
+			<button class="ui yellow button">
+  				<a href = "/"><i class="home icon"></i></a>
+			</button></a>
 		</div>
 
-	<a href = "/">Go To Homepage</a>
+	
 {% endblock %}
