--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-	<h1 class = "ui center aligned header">NotePad</h1>
+	<h1 class = "ui center aligned header">Noteefy</h1>
 	
 	<form class = "ui form" action = "/search" method="POST">
 		<div class="ui icon input">
@@ -16,22 +16,18 @@
 	{% for todo in todo_list %}
 	
 	<div class = "ui segment">
-		<p class = "ui big header"> {{ todo[1] }} <br> {{ todo[4] }} </p><br>
+		<p class = "ui big header"> {{ todo[1] }} </p><br> 
+		<p>{{ todo[4] }} </p><br>
 		<p>{% for tag in todo[3] %}
 		<a href = "/search_tags/{{ tag }}">#{{ tag }}</a><br>
 		{% endfor %}</p>
 		
-		{% if todo[2] == False %}
-		<span class = "ui grey label" >Not ReRead</span>
-		<a class = "ui green button" href = "/update/{{ todo[0] }}">Mark As Read</a>
-		
-		{% else %}
-		<span class = "ui green label" >ReRead</span>
-		<a class = "ui grey button" href = "/update_not/{{ todo[0] }}">Mark As UnRead</a>
-		{% endif %}
+		<span class = "ui grey label" ><i class="calendar check outline icon"></i>{{ todo[2] }}</span>
+		<a class = "ui green button" href = "/update/{{ todo[0] }}"><center><i class="edit icon"></i></center></a>
 		
 
-		<a class = "ui red button" href = "/delete/{{ todo[0] }}">Delete Note</a>
+
+		<a class = "ui red button" href = "/delete/{{ todo[0] }}"><center><i class="trash icon"></i></center></a>
 	</div>
 	
 	{% endfor %}
