--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,12 @@
 	
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
 
-	<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>	
+	<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+	<style>		
+	body {
+  		background-color: teal;
+		}
+	</style>
 
 </head>
 
