--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,6 +31,6 @@
 	</div>
 	
 	{% endfor %}
-	<p>{{ email }}</p><a href = "/logout">LogOut</a>
+	<p>{{ email }}</p><a href = "/logout">LogOut</a><br>
 	
 {% endblock %}
