--- a/templates/update.html
+++ b/templates/update.html
@@ -26,12 +26,12 @@
 			<button class="ui green button">
  				Update
 			</button></add>
-			<a href = "/">
+			<a href = "/profile">
 			<button class="ui red button">
   				Discard
 			</button></a>
 			<button class="ui yellow button">
-  				<a href = "/"><i class="home icon"></i></a>
+  				<a href = "/profile"><i class="home icon"></i></a>
 			</button></a>
 		</div>
 
