--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,33 @@
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+body {
+  background-color: teal;
+}
+</style>
+<body>
 
-	
-
-<div>
-  <div class = "huge header">
-    <h1 style = "font-family: 'Dancing Script', cursive;">Noteefy</h1>
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top">Welcome to Noteefy!</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"><a href = "/login">Login With Google</a></p>
   </div>
-  <div>
-    <h1>Welcome to Noteefy!</h1>
-    <hr>
-    <p><a href = '/login'>Click here to Login with Google</a></p>
-  </div>
+  
 </div>
 
+</body>
+</html>
 
