--- a/templates/search.html
+++ b/templates/search.html
@@ -31,7 +31,7 @@
 	</div>
 	{% endfor %}
 	<button class="ui yellow button">
-  		<a href = "/"><i class="home icon"></i></a>
+  		<a href = "/profile"><i class="home icon"></i></a>
 	</button></a>
 	
 {% endblock %}
