Makes changes in style

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Noteefy</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 <style>
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
@@ -14,16 +16,19 @@ body, html {height: 100%}
   background-size: cover;
 }
 body {
-  background-color: teal;
+  background-color: #0A232A;
+}
+#title {
+	font-family: 'Special Elite', cursive;
 }
 </style>
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Welcome to Noteefy!</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"><a href = "/login">Login With Google</a></p>
+    <h1 class="w3-jumbo w3-animate-top">Welcome to</h1> 
+    <center><h1 class="w3-jumbo w3-animate-top" id="title">Noteefy!</h1></center>
+    <p class="w3-large w3-center"><a href = "/login">  <button class="ui inverted button">Login With Google</a></p></button>
   </div>
   
 </div>
