--- a/templates/note.html
+++ b/templates/note.html
@@ -1,36 +1,34 @@
 {% extends 'base.html' %}
 
 {% block main %}
-	
-	<h1 class = "ui center aligned header">Noteefy</h1>
 
 	<form class = "ui form" action = "/add" method="POST">
 		<div class="ui form">
 			<div class="field">
-    				<label for="tags">Note Title</label>
+    				<label id = "white">Note Title</label>
 				<input type = "text" name = "title" placeholder = "Enter Note Title">
   			</div>
   		
 			<div class="field">
-    				<label>Description</label>
+    				<label id = "white">Description</label>
     				<textarea type = "text" name = "description" placeholder = "Enter Something..." rows="10" cols="10"></textarea>	    		
   			</div>
   		
   			<div class="field">
-    				<label for="tags">Enter Tags</label>
+    				<label id = "white">Enter Tags</label>
 				<input type = "text" name = "tags" placeholder = "Enter Tags Seperated by Comma (Ex: Tag1,Tag2)">
   			</div>
   	</form>
 
   			<a href = "/add">
-			<button class="ui green button">
+			<button class="ui inverted green button">
  				Save
 			</button></add>
 			<a href = "/profile">
-			<button class="ui red button">
+			<button class="ui inverted red button">
   				Discard
 			</button></a>
-			<button class="ui yellow button">
+			<button class="ui inverted yellow button">
   				<a href = "/profile"><i class="home icon"></i></a>
 			</button></a>
 		</div>
