--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,36 +1,37 @@
 {% extends 'base.html' %}
 
 {% block main %}
-
-	<h1 class = "ui center aligned header">Noteefy</h1>
 	
 	<form class = "ui form" action = "/search" method="POST">
 		<div class="ui icon input">
-  			<input type="text" name = "search" placeholder="Search...">
+  			<input type="text" name = "search" placeholder="Search for a tag...">
 		</div>	
 		
 	</form><br>
+	<span class = "ui grey label" >Welcome {{ email }} </span> <img src={{pic_info}} alt="Avatar" style="width:30px" align="right"><br><br>
 	
 	<a href = "/add_new"><button class="fluid ui button">Add New Note</button></a>
 	
 	{% for todo in todo_list %}
 	
-	<div class = "ui segment">
-		<p class = "ui big header"> {{ todo[1] }} </p><br> 
-		<p>{{ todo[4] }} </p><br>
-		<p>{% for tag in todo[3] %}
-		<a href = "/search_tags/{{ tag }}">#{{ tag }}</a><br>
+	<div class = "ui segment" id="div_int">
+		<p class = "ui big header" id = "white"> {{ todo[1] }} </p><br> 
+		<p id = "white">{{ todo[4] }} </p><br>
+		<p id = "white">{% for tag in todo[3] %}
+		<a href = "/search_tags/{{ tag }}" id = "white">#{{ tag }}</a><br>
 		{% endfor %}</p>
 		
-		<span class = "ui grey label" ><i class="calendar check outline icon"></i>{{ todo[2] }}</span>
-		<a class = "ui green button" href = "/update/{{ todo[0] }}"><center><i class="edit icon"></i></center></a>
+		<span class = "ui teal label" ><i class="calendar check outline icon"></i>{{ todo[2] }}</span>
+		<a class = "ui inverted green button" href = "/update/{{ todo[0] }}"><center><i class="edit icon"></i></center></a>
 		
 
 
-		<a class = "ui red button" href = "/delete/{{ todo[0] }}"><center><i class="trash icon"></i></center></a>
+		<a class = "ui inverted red button" href = "/delete/{{ todo[0] }}"><center><i class="trash icon"></i></center></a>
 	</div>
 	
 	{% endfor %}
-	<p>{{ email }}</p><a href = "/logout">LogOut</a><br>
+	<button class="ui inverted pink button"><a href = "/logout" id="white">Log Out <i class="sign-out icon"></i></a></button>
+	
+	{{ info }}
 	
 {% endblock %}
