--- a/templates/note.html
+++ b/templates/note.html
@@ -28,8 +28,8 @@
 			<button class="ui inverted red button">
   				Discard
 			</button></a>
-			<button class="ui inverted yellow button">
-  				<a href = "/profile"><i class="home icon"></i></a>
+			<button class="ui inverted purple button">
+  				<a href = "/profile"><i class="home icon" style="color:white;"></i></a>
 			</button></a>
 		</div>
 
