--- a/templates/note.html
+++ b/templates/note.html
@@ -21,15 +21,12 @@
   	</form>
 
   			<a href = "/add">
-			<button class="ui inverted green button">
- 				Save
-			</button></add>
-			<a href = "/profile">
-			<button class="ui inverted red button">
-  				Discard
+			<button class="ui inverted green button" id = "white">
+ 				 Noteefy
 			</button></a>
-			<button class="ui inverted purple button">
-  				<a href = "/profile"><i class="home icon" style="color:white;"></i></a>
+			<a href = "/profile">
+			<button class="ui inverted red button" id = "white">
+  				Burn this stuff
 			</button></a>
 		</div>
 
