--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,19 +2,21 @@
 
 {% block main %}
 	
+	
+	<a class="ui label">
+  	<img class="ui right spaced avatar image" src="{{ pic_info }}">
+  	the name is, {{name_info}}
+	</a> 
+	<a href = "/logout" id="white"><button class="ui inverted pink button" align="right" style="float:right;">Get Kicked Out <i class="sign-out icon"></i></button><br><br></a>
+	
+	<a href = "/add_new"><button class="fluid ui button">Scribble Something New</button></a><br>
+	
 	<form class = "ui form" action = "/search" method="POST">
 		<div class="ui icon input">
-  			<input type="text" name = "search" placeholder="Search for a tag...">
+  			<input type="text" name = "search" placeholder="have a tag in mind?">
 		</div>	
 		
 	</form><br>
-	<a class="ui label">
-  	<img class="ui right spaced avatar image" src="{{ pic_info }}">
-  	Welcome, {{name_info}}
-	</a> 
-	<button class="ui inverted pink button" align="right" style="float:right;"><a href = "/logout" id="white">Log Out <i class="sign-out icon"></i></a></button><br><br>
-	
-	<a href = "/add_new"><button class="fluid ui button">Add New Note</button></a><br>
 	
 	{% for todo in todo_list %}
 	
