makes style changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@ body {
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Welcome to</h1> 
     <center><h1 class="w3-jumbo w3-animate-top" id="title">Noteefy!</h1></center>
-    <a href = "/login"><p class="w3-large w3-center"><button class="ui inverted button"><i class="google icon"></i>  Let me in, here is my Google </button></p></a>
+    <a href = "/login"><p class="w3-large w3-center"><button class="ui inverted button"><i class="google icon"></i>  Let me in, here is my Google ID </button></p></a>
   </div>
   
 </div>
