--- a/templates/search.html
+++ b/templates/search.html
@@ -25,7 +25,7 @@
 	{% for todo in tag_list %}
 	<div class = "ui segment" id="div_int">
 		<p class = "ui big header" id="white"> {{ todo[1] }}</p><br> 
-		<p id="white">{{ todo[4] }} </p><br>
+		<pre><p id="white">{{ todo[4] }} </p></pre><br>
 		<p id="white">{% for tag in todo[3] %}
 		<a href = "/search_tags/{{ todo[0] }}" id="white">#{{ tag }}</a><br>
 		{% endfor %}</p>
